--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "xb2-node",
   "version": "1.0.0",
   "description": "小白兔的开发之路",
-  "author": "xiaobao"
+  "author": "xiaobao",
+  "scripts": {
+    "start:dev": "tsc-watch --onSuccess \"node dist/main.js\""
+  },
 
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.2",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
