--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start:dev": "tsc-watch --onSuccess \"node dist/main.js\""
   },
-
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.2",
+    "dotenv": "^16.3.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
